compiling_error.txt
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:155:13: error: use of undeclared identifier 'n'
        for(v=0; v<n; v++)
                   ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:156:3: error: use of undeclared identifier 'state'
                state[v] = 1;
                ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:160:2: error: implicit declaration of function 'BFS' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        BFS(v);
        ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:163:6: error: conflicting types for 'BFS'
void BFS(int v)
     ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:160:2: note: previous implicit declaration is here
        BFS(v);
        ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:167:16: error: too few arguments to function call, expected 2, have 1
        insert_queue(v);
        ~~~~~~~~~~~~  ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:56:1: note: 'insert_queue' declared here
void insert_queue(int, queue);
^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:168:2: error: use of undeclared identifier 'state'
        state[v] = waiting;
        ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:168:13: error: use of undeclared identifier 'waiting'; did you mean 'waitid'?
        state[v] = waiting;
                   ^~~~~~~
                   waitid
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/sys/wait.h:251:9: note: 'waitid' declared here
int     waitid(idtype_t, id_t, siginfo_t *, int) __DARWIN_ALIAS_C(waitid);
        ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:170:23: error: too few arguments to function call, expected 1, have 0
        while(!isEmpty_queue())
               ~~~~~~~~~~~~~ ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:58:1: note: 'isEmpty_queue' declared here
int isEmpty_queue(queue);
^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:172:21: error: too few arguments to function call, expected 1, have 0
                v = delete_queue( );
                    ~~~~~~~~~~~~  ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:57:1: note: 'delete_queue' declared here
int delete_queue(queue);
^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:174:3: error: use of undeclared identifier 'state'
                state[v] = visited;
                ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:174:14: error: use of undeclared identifier 'visited'
                state[v] = visited;
                           ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:176:14: error: use of undeclared identifier 'n'
                for(i=0; i<n; i++)
                           ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:178:7: error: use of undeclared identifier 'adj'
                        if(adj[v][i] == 1 && state[i] == 1)
                           ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:178:25: error: use of undeclared identifier 'state'
                        if(adj[v][i] == 1 && state[i] == 1)
                                             ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:180:19: error: too few arguments to function call, expected 2, have 1
                                insert_queue(i);
                                ~~~~~~~~~~~~  ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:56:1: note: 'insert_queue' declared here
void insert_queue(int, queue);
^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:181:5: error: use of undeclared identifier 'state'
                                state[i] = waiting;
                                ^
/Users/christopherscully/Documents/GitHub/MachineProblem3/main.c:181:16: error: use of undeclared identifier 'waiting'; did you mean 'waitid'?
                                state[i] = waiting;
                                           ^~~~~~~
                                           waitid
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/sys/wait.h:251:9: note: 'waitid' declared here
int     waitid(idtype_t, id_t, siginfo_t *, int) __DARWIN_ALIAS_C(waitid);
        ^
17 errors generated.
